--- a/models_dir/ppo_defaults/config.yaml
+++ b/models_dir/ppo_defaults/config.yaml
@@ -29,12 +29,21 @@ policy_net:
     predictors:
         policy:
             cls_name: LinearCategoricalPolicyHead
-            cls_args: {num_features: 256, num_actions: 18}
+            cls_args: {num_features: 256}
         value_extrinsic:
             cls_name: LinearValueHead
             cls_args: {num_features: 256}
     optimizer:
         cls_name: Adam
-        cls_args: {lr: 0.001, eps: 0.00001}
+        cls_args: {lr: 0.00025, eps: 0.00001}
+    scheduler:
+        cls_name: OneCycleLR
+        cls_args:
+            max_lr: 0.00025
+            total_steps: 11000000
+            pct_start: 0.0,
+            anneal_strategy: linear
+            cycle_momentum: False
+            div_factor: 1.0
 value_net:
     use_shared_architecture: True
