--- a/models_dir/ppo_defaults/config.yaml
+++ b/models_dir/ppo_defaults/config.yaml
@@ -8,7 +8,8 @@ algo:
     segment_length: 128
     opt_epochs: 3
     learner_batch_size: 32
-    clip_param: 0.1
+    initial_clip_param: 0.1
+    final_clip_param: 0.0
     ent_coef: 0.01
     vf_loss_coef: 1.0
     gae_lambda:
