--- a/models_dir/ppo_groupnorm_adamw/config.yaml
+++ b/models_dir/ppo_groupnorm_adamw/config.yaml
@@ -31,7 +31,7 @@ networks:
         preprocessing:
             ToChannelMajor: {}
         architecture:
-            cls_name: AsyncCNN
+            cls_name: NatureCNN
             cls_args: {img_channels: 1, use_gn: True}
         predictors:
             policy:
@@ -42,7 +42,7 @@ networks:
                 cls_args: {num_features: 256}
         optimizer:
             cls_name: AdamW
-            cls_args: {lr: 0.00025, eps: 0.00001, wd: 0.01}
+            cls_args: {lr: 0.00025, beta1: 0.0, eps: 0.00001, wd: 0.01}
         scheduler:
             cls_name: OneCycleLR
             cls_args:
