--- a/models_dir/good_hparams/config.yaml
+++ b/models_dir/good_hparams/config.yaml
@@ -12,9 +12,9 @@ algo:
     clip_param_final: 0.0
     ent_coef_init: 0.01
     ent_coef_final: 0.01
-    vf_loss_coef: 0.5
-    vf_loss_cls: MSELoss
-    vf_loss_clipping: True
+    vf_loss_coef: 1.0
+    vf_loss_cls: SmoothL1Loss
+    vf_loss_clipping: False
     gae_lambda:
         extrinsic: 0.95
     gae_extra_steps: 0
@@ -24,7 +24,7 @@ algo:
     use_pcgrad: False
     stats_memory_len: 100
     checkpoint_frequency: 100
-    max_steps: 10000000
+    max_steps: 50000000
 env:
     id: 'PongNoFrameskip-v4'
     wrappers:
@@ -36,17 +36,17 @@ networks:
             ToChannelMajor: {}
         architecture:
             cls_name: NatureCNN
-            cls_args: {img_channels: 4, ortho_init: False}
+            cls_args: {img_channels: 4, ortho_init: True}
         predictors:
             policy:
                 cls_name: LinearCategoricalPolicyHead
-                cls_args: {num_features: 512, ortho_init: False}
+                cls_args: {num_features: 512, ortho_init: True}
             value_extrinsic:
                 cls_name: LinearValueHead
-                cls_args: {num_features: 512, ortho_init: False}
+                cls_args: {num_features: 512, ortho_init: True}
         optimizer:
             cls_name: Adam
-            cls_args: {lr: 0.001, betas: [0.9, 0.999], eps: 0.00000001}
+            cls_args: {lr: 0.0001, betas: [0.9, 0.999], eps: 0.00001}
         scheduler:
             cls_name: OneCycleLR
             cls_args:
