--- a/models_dir/my_old_repo_ppo_hparams/config.yaml
+++ b/models_dir/my_old_repo_ppo_hparams/config.yaml
@@ -5,14 +5,14 @@ distributed:
     master_port: '12345'
 algo:
     cls_name: PPO
-    seg_len: 1024
+    seg_len: 256
     opt_epochs: 4
     learner_batch_size: 256
-    clip_param_init: 0.1
+    clip_param_init: 0.2
     clip_param_final: 0.0
     ent_coef_init: 0.01
     ent_coef_final: 0.01
-    vf_loss_coef: 0.5
+    vf_loss_coef: 1.0
     vf_loss_cls: MSELoss
     vf_loss_clipping: False
     gae_lambda:
@@ -20,11 +20,11 @@ algo:
     gae_extra_steps: 0
     discount_gamma:
         extrinsic: 0.99
-    standardize_adv: False
+    standardize_adv: True
     use_pcgrad: False
     stats_memory_len: 100
     checkpoint_frequency: 100
-    max_steps: 50000000
+    max_steps: 11000000
 env:
     id: 'PongNoFrameskip-v4'
     wrappers:
@@ -36,14 +36,14 @@ networks:
             ToChannelMajor: {}
         architecture:
             cls_name: NatureCNN
-            cls_args: {img_channels: 4, ortho_init: True}
+            cls_args: {img_channels: 4, ortho_init: False}
         predictors:
             policy:
                 cls_name: LinearCategoricalPolicyHead
-                cls_args: {num_features: 512, ortho_init: True}
+                cls_args: {num_features: 512, ortho_init: False}
             value_extrinsic:
                 cls_name: LinearValueHead
-                cls_args: {num_features: 512, ortho_init: True}
+                cls_args: {num_features: 512, ortho_init: False}
         optimizer:
             cls_name: Adam
             cls_args: {lr: 0.001, betas: [0.90, 0.999], eps: 0.00001}
