--- a/models_dir/my_old_repo_ppo_hparams/config.yaml
+++ b/models_dir/my_old_repo_ppo_hparams/config.yaml
@@ -26,7 +26,7 @@ algo:
     checkpoint_frequency: 100
     max_steps: 11000000
 env:
-    id: 'PongNoFrameskip-v4'
+    id: 'BreakoutNoFrameskip-v4'
     wrappers:
         AtariWrapper: {}
         DeepmindWrapper: {frame_stack: True, lazy: False}
