--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .idea
 checkpoints
-models_dir/*/checkpoints
-models_dir/*/tensorboard_logs
+models_dir/*/*/checkpoints
+models_dir/*/*/tensorboard_logs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
