--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 checkpoints
 models_dir/*/*/checkpoints
 models_dir/*/*/tensorboard_logs
+models_dir/*/*/*/checkpoints
+models_dir/*/*/*/tensorboard_logs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
