--- a/models_dir/atari_rnd/config.yaml
+++ b/models_dir/atari_rnd/config.yaml
@@ -37,24 +37,33 @@ algo:
     max_steps: 500000000        # 0.5B
 env:
     wrappers:
-        TimeLimitWrapper: {max_episode_steps: 18000}
-        StickyActionsWrapper: {stick_prob: 0.25}
-        MaxAndSkipWrapper: {num_skip: 4, apply_max: True}
-        ResizeWrapper: {target_height: 84, target_width: 84, use_grayscale: True}
-        ActionResetWrapper: {action_reset_sequence: [1, 2]}
-        ClipRewardWrapper: {low: -1.0, high: 1.0}
-        ScaleObservationsWrapper: {scale_factor: 0.00392156862745098}  # 1/255
-        FrameStackWrapper: {num_stack: 4, lazy: False}
-        RandomNetworkDistillationWrapper:
-            rnd_optimizer_cls_name: Adam
-            rnd_optimizer_args: {lr: 0.0001, eps: 0.00001}
-            world_size: 32
-            widening: 1
-            non_learning_steps: 12800
-        NormalizeRewardWrapper:
-            gamma: 0.99
-            world_size: 32
-            key: intrinsic_rnd
+        train:
+            TimeLimitWrapper: {max_episode_steps: 18000}
+            StickyActionsWrapper: {stick_prob: 0.25}
+            MaxAndSkipWrapper: {num_skip: 4, apply_max: True}
+            ResizeWrapper: {target_height: 84, target_width: 84, use_grayscale: True}
+            ActionResetWrapper: {action_reset_sequence: [1, 2]}
+            ClipRewardWrapper: {low: -1.0, high: 1.0}
+            ScaleObservationsWrapper: {scale_factor: 0.00392156862745098}  # 1/255
+            FrameStackWrapper: {num_stack: 4, lazy: False}
+            RandomNetworkDistillationWrapper:
+                rnd_optimizer_cls_name: Adam
+                rnd_optimizer_args: {lr: 0.0001, eps: 0.00001}
+                world_size: 32
+                widening: 1
+                non_learning_steps: 12800
+            NormalizeRewardWrapper:
+                gamma: 0.99
+                world_size: 32
+                key: intrinsic_rnd
+        evaluate:
+            TimeLimitWrapper: {max_episode_steps: 18000}
+            StickyActionsWrapper: {stick_prob: 0.25}
+            MaxAndSkipWrapper: {num_skip: 4, apply_max: True}
+            ResizeWrapper: {target_height: 84, target_width: 84, use_grayscale: True}
+            ActionResetWrapper: {action_reset_sequence: [1, 2]}
+            ScaleObservationsWrapper: {scale_factor: 0.00392156862745098}  # 1/255
+            FrameStackWrapper: {num_stack: 4, lazy: False}
 networks:
     policy_net:
         preprocessing:
