--- a/models_dir/atari_ppo/config.yaml
+++ b/models_dir/atari_ppo/config.yaml
@@ -5,28 +5,29 @@ distributed:
     master_port: '12345'
 algo:
     cls_name: PPO
-    seg_len: 256
-    opt_epochs: 3
-    learner_batch_size: 64
-    clip_param_init: 0.2
-    clip_param_final: 0.0
-    ent_coef_init: 0.01
-    ent_coef_final: 0.01
-    vf_loss_coef: 1.0
-    vf_loss_cls: MSELoss
-    vf_loss_clipping: False
-    vf_simple_weighting: True
-    credit_assignment_spec:
-        extrinsic:
-            cls_name: GAE
-            cls_args: {lambda_: 0.95, gamma: 0.99, use_dones: True}
-    extra_steps: 0
-    standardize_adv: True
-    use_pcgrad: False
-    stats_memory_len: 100
-    checkpoint_frequency: 100
-    non_learning_steps: 0
-    max_steps: 10000000
+    cls_args:
+        seg_len: 256
+        opt_epochs: 3
+        learner_batch_size: 64
+        clip_param_init: 0.2
+        clip_param_final: 0.0
+        ent_coef_init: 0.01
+        ent_coef_final: 0.01
+        vf_loss_coef: 1.0
+        vf_loss_cls: MSELoss
+        vf_loss_clipping: False
+        vf_simple_weighting: True
+        credit_assignment_spec:
+            extrinsic:
+                cls_name: GAE
+                cls_args: {lambda_: 0.95, gamma: 0.99, use_dones: True}
+        extra_steps: 0
+        standardize_adv: True
+        use_pcgrad: False
+        stats_memory_len: 100
+        checkpoint_frequency: 100
+        non_learning_steps: 0
+        max_steps: 10000000
 env:
     wrappers:
         train:
