--- a/models_dir/atari_rnd/config.yaml
+++ b/models_dir/atari_rnd/config.yaml
@@ -85,10 +85,10 @@ networks:
                 cls_name: LinearCategoricalPolicyHead
                 cls_args: {num_features: 512, ortho_init: True}
             value_extrinsic:
-                cls_name: LinearValueHead
+                cls_name: LinearSimpleValueHead
                 cls_args: {num_features: 512, ortho_init: True}
             value_intrinsic_rnd:
-                cls_name: LinearValueHead
+                cls_name: LinearSimpleValueHead
                 cls_args: {num_features: 512, ortho_init: True}
         optimizer:
             cls_name: Adam
